# pre-commit-dune-format-dune-file

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_dune_format_dune_file/: format.py
